--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <title>Your app</title>
+  <title>TO-DO</title>
   <script src="https://unpkg.com/zone.js"></script>
   <script src="https://unpkg.com/reflect-metadata"></script>
-  <script src="https://unpkg.com/@homebots/elements"></script>
-  <script src="./index.ts"></script>
-  <link rel="stylesheet" href="/index.scss" />
+  <script src="./app/index.ts"></script>
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/app/index.scss" />
 </head>
 
 <body>
