--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
   <script src="https://unpkg.com/reflect-metadata"></script>
   <script src="./app/index.ts"></script>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/app/index.scss" />
 </head>
 
-<body>
+<body style="background-color: #374046;">
   <app-root></app-root>
 </body>
 
