--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <title>TO-DO</title>
+  <title>Tasks</title>
   <script src="https://unpkg.com/zone.js"></script>
   <script src="https://unpkg.com/reflect-metadata"></script>
   <script src="./app/index.ts"></script>
